# memVidMCP

./: .gitignore  README.md
memvid-mcp/: .gitignore  README.md  pyproject.toml  test_memvid.py  test_server.py
memvid-mcp/src/memvid_mcp/: __init__.py  server.py
